test/fixtures/architecture-conformance/negative/provider-contract/providerAdapterContract.ts
export const PROVIDER_ADAPTER_CONTRACTS = {
  hover: {
    feature: 'hover',
    lane: 'interactive',
    budgetMs: 150,
    cachePolicy: 'keyed',
    cacheFeature: 'hover',
    degradedResult: 'stale',
    sourceScope: 'document',
    allowsFullScan: true,
  },
};
